# book-exercises

./: README.md
Accelerated C++/: README  makefile
Accelerated C++/chapter00/: 0-10.cpp  0-2.cpp  0-4.cpp  hello.cc  makefile
Accelerated C++/chapter01/: 1-6.cpp  frame.cc  greet.cc  makefile
Accelerated C++/chapter02/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-7.cpp  2-8.cpp  2-9.cpp  frame.cc  makefile
Accelerated C++/chapter03/: 3-2.cpp  3-3.cpp  3-4.cpp  3-5.cpp  3-6.cpp  avg.cc  makefile  med.cc
Accelerated C++/chapter04/: 4-2.cpp  4-3.cpp  4-4.cpp  4-5.cpp  4-6.cpp  4-7.cpp  Student_info.h  grade.cc  (+7 more)
Learn Python the Hard Way/: bearRoom.py  deathRoom.py  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex13a.py  ex13b.py  ex14.py  ex15.py  ex16.py  ex16a.py  ex17.py  ex18.py  ex19.py  ex2.py  ex20.py  ex21.py  ex22.txt  ex24.py  ex25.py  ex26.py  ex28.py  ex29.py  ex3.py  ex30.py  ex31.py  ex32.py  ex33.py  ex34.txt  ex35.py  ex36.py  ex37.py  ex37.txt  ex39.py  ex4.py  ex40.py  ex41.py  ex42.py  (+11 more)
Learn You A haskell for Great Good/: ch2.hs
Learn You a Haskell for Great Good/: Geometry.hs  ch12.hs  ch3.hs  ch4.hs  ch5.hs  ch6.hs  ch7.hs  ch8.hs
Pragmatic Programmer/: 2-5.rb  2-5.txt  2-6.txt  2-7.tab.c  2-7.y  2-8.rb  3-11.rb  3-11.txt  3-12.pl  3-12.rb  3-13.rb  3-13.txt  6-41.rb  blender.rb  cg_cpp.rb  cg_ruby.rb
Programming Clojure/: ch1.clj  ch2.clj  ch3.clj  ch4.clj  ch5.clj  ch6.clj  ch7.clj  ch8.clj  ch9.clj  light-cycle.clj  tron.clj
Real World Haskell/ch05/: Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  pretty.cabal
(+547 files in other folders)
