Name: pretty
Version: 0.1

-- Test comment

Synopsis: Pretty printing, with JSON support
Description:
 Simple pretty-printing library illustrating
 how to develop a Haskell library.
Author: Real World Haskell
Maintainer: nobody@realworldhaskell.org

Cabal-Version: >= 1.2
library
 Exposed-Modules: Prettify
                  PrettyJSON
                  SimpleJSON
 Build-Depends:   base >= 2.0
